# Mobius-Master

./: .dockerignore  .gcloudignore  .gitignore  .gitmodules  .mobius_start_all.pids  Dockerfile.module-hub  README.md  cloudbuild.module-hub.yaml  consolidating_discovery.py  credentials.env.template  decomp_v2_full.py  decomp_v2_test.py  landing_server.py  meval  mstart  mstop  requirements.txt
mobius-retriever/: README.md  benchmark_tagged_20260218-164247.json  benchmark_tagged_20260218-164315.json  benchmark_tagged_20260218-172732.json  benchmark_tagged_20260218-172736.json  benchmark_tagged_20260218-172757.json  benchmark_tagged_20260218-173124.json  benchmark_tagged_20260218-175706.json  eval_questions_calibration.yaml  eval_questions_dev.yaml  pyproject.toml
mobius-retriever/configs/: bm25_sigmoid.yaml  path_b_v1.yaml  reranker_v1.yaml  retrieval_cutoffs.yaml
mobius-retriever/docs/: J_TAGS_JURISDICTION.md  LATENCY_BASELINE.md  RERANKER_PLANNED_CHANGES.md
mobius-retriever/reports/: dev_chat_pipeline_report.md  dev_chat_pipeline_report_bm25.md  dev_chat_pipeline_report_bm25_detailed.md  dev_retrieval_before_after_cutoffs.md  dev_retrieval_report.md  dev_retrieval_report_before_cutoffs.md
mobius-retriever/scripts/: collect_bm25_sigmoid_config.py  collect_vector_cutoff.py  dev_retrieval_report.py
mobius-retriever/src/mobius_retriever/: __init__.py  assemble.py  bm25_search.py  cli.py  config.py  j_tags_jurisdiction.py  jpd_tagger.py  pipeline.py  rerank.py  reranker.py  retriever.py  tagger.py  vector_search.py
mobius-retriever/tests/: test_path_b.py
mobius-skills-core/: .gitignore  README.md  pyproject.toml
mobius-skills-core/mobius_skills_core/: __init__.py  _types.py
mobius-skills-core/mobius_skills_core/skills/: __init__.py  corpus_search.py  document_upload.py  google_search.py  healthcare_query.py  lazy_corpus_search.py  lazy_rag.py  list_thread_uploads.py  phi_audit.py  thread_corpus_search.py  web_scrape.py
mobius-skills-core/scripts/: demo.py
mobius-skills-core/tests/: test_corpus_search.py  test_document_upload.py  test_emits.py  test_google_search.py  test_healthcare_query.py  test_lazy_rag.py  test_list_thread_uploads.py  test_phi_audit.py  test_types.py  test_web_scrape.py
(+691 files in other folders)
